--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -56,67 +57,17 @@
         </div>
     </section>
 
-    <!-- Product Grid -->
     <section class="px-6 py-16">
         <div class="container mx-auto">
             <h2 class="text-3xl font-bold text-[#CFBCFF] text-center mb-12">أدواتنا الموصى بها</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <!-- Product Card 1 -->
-                <div class="bg-[#1A1A1A] rounded-[2.5rem] p-6 text-center card-glow hover:border hover:border-[#CFBCFF] transition">
-                    <div class="floating-glow rounded-lg mb-4">
-                        <img src="https://via.placeholder.com/300x200/1A1A1A/FFFFFF?text=Product+1" alt="Product 1" class="w-full h-48 object-cover rounded-lg">
-                    </div>
-                    <h3 class="text-xl font-semibold mb-2">أداة التركيز 1</h3>
-                    <p class="text-gray-400 mb-4">وصف قصير للأداة التي تساعد في التركيز العميق.</p>
-                    <button class="bg-[#CFBCFF] text-black px-4 py-2 rounded-full text-sm font-medium hover:bg-[#BFA0FF] transition">Learn More</button>
+            
+            <div id="product-grid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 </div>
-                <!-- Product Card 2 -->
-                <div class="bg-[#1A1A1A] rounded-[2.5rem] p-6 text-center card-glow hover:border hover:border-[#CFBCFF] transition">
-                    <div class="floating-glow rounded-lg mb-4">
-                        <img src="https://via.placeholder.com/300x200/1A1A1A/FFFFFF?text=Product+2" alt="Product 2" class="w-full h-48 object-cover rounded-lg">
-                    </div>
-                    <h3 class="text-xl font-semibold mb-2">أداة التركيز 2</h3>
-                    <p class="text-gray-400 mb-4">وصف قصير للأداة التي تساعد في التركيز العميق.</p>
-                    <button class="bg-[#CFBCFF] text-black px-4 py-2 rounded-full text-sm font-medium hover:bg-[#BFA0FF] transition">Learn More</button>
-                </div>
-                <!-- Product Card 3 -->
-                <div class="bg-[#1A1A1A] rounded-[2.5rem] p-6 text-center card-glow hover:border hover:border-[#CFBCFF] transition">
-                    <div class="floating-glow rounded-lg mb-4">
-                        <img src="https://via.placeholder.com/300x200/1A1A1A/FFFFFF?text=Product+3" alt="Product 3" class="w-full h-48 object-cover rounded-lg">
-                    </div>
-                    <h3 class="text-xl font-semibold mb-2">أداة التركيز 3</h3>
-                    <p class="text-gray-400 mb-4">وصف قصير للأداة التي تساعد في التركيز العميق.</p>
-                    <button class="bg-[#CFBCFF] text-black px-4 py-2 rounded-full text-sm font-medium hover:bg-[#BFA0FF] transition">Learn More</button>
-                </div>
-                <!-- Product Card 4 -->
-                <div class="bg-[#1A1A1A] rounded-[2.5rem] p-6 text-center card-glow hover:border hover:border-[#CFBCFF] transition">
-                    <div class="floating-glow rounded-lg mb-4">
-                        <img src="https://via.placeholder.com/300x200/1A1A1A/FFFFFF?text=Product+4" alt="Product 4" class="w-full h-48 object-cover rounded-lg">
-                    </div>
-                    <h3 class="text-xl font-semibold mb-2">أداة التركيز 4</h3>
-                    <p class="text-gray-400 mb-4">وصف قصير للأداة التي تساعد في التركيز العميق.</p>
-                    <button class="bg-[#CFBCFF] text-black px-4 py-2 rounded-full text-sm font-medium hover:bg-[#BFA0FF] transition">Learn More</button>
-                </div>
-                <!-- Product Card 5 -->
-                <div class="bg-[#1A1A1A] rounded-[2.5rem] p-6 text-center card-glow hover:border hover:border-[#CFBCFF] transition">
-                    <div class="floating-glow rounded-lg mb-4">
-                        <img src="https://via.placeholder.com/300x200/1A1A1A/FFFFFF?text=Product+5" alt="Product 5" class="w-full h-48 object-cover rounded-lg">
-                    </div>
-                    <h3 class="text-xl font-semibold mb-2">أداة التركيز 5</h3>
-                    <p class="text-gray-400 mb-4">وصف قصير للأداة التي تساعد في التركيز العميق.</p>
-                    <button class="bg-[#CFBCFF] text-black px-4 py-2 rounded-full text-sm font-medium hover:bg-[#BFA0FF] transition">Learn More</button>
-                </div>
-                <!-- Product Card 6 -->
-                <div class="bg-[#1A1A1A] rounded-[2.5rem] p-6 text-center card-glow hover:border hover:border-[#CFBCFF] transition">
-                    <div class="floating-glow rounded-lg mb-4">
-                        <img src="https://via.placeholder.com/300x200/1A1A1A/FFFFFF?text=Product+6" alt="Product 6" class="w-full h-48 object-cover rounded-lg">
-                    </div>
-                    <h3 class="text-xl font-semibold mb-2">أداة التركيز 6</h3>
-                    <p class="text-gray-400 mb-4">وصف قصير للأداة التي تساعد في التركيز العميق.</p>
-                    <button class="bg-[#CFBCFF] text-black px-4 py-2 rounded-full text-sm font-medium hover:bg-[#BFA0FF] transition">Learn More</button>
-                </div>
-            </div>
         </div>
     </section>
+
+    <script src="admin.js"></script>
+    <script src="index.js"></script>
+    <script src="Minimal-HTML.js"></script>
 </body>
-</html> 
+</html>
