--- a/index.html
+++ b/index.html
@@ -38,8 +38,20 @@
                 <li><a href="#" class="text-white hover:text-[#CFBCFF] transition">Reviews</a></li>
                 <li><a href="#" class="text-white hover:text-[#CFBCFF] transition">Setup</a></li>
                 <li><a href="#" class="text-white hover:text-[#CFBCFF] transition">Admin</a></li>
-            </ul>
-        </nav>
+            <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
+    <div class="text-2xl font-bold text-[#CFBCFF]">Aura Web</div>
+    
+    <ul class="flex space-x-6 rtl:space-x-reverse items-center">
+        <li><a href="#product-grid" class="text-white hover:text-[#CFBCFF] transition">Tools</a></li>
+        <li><a href="#" class="text-white hover:text-[#CFBCFF] transition">Reviews</a></li>
+        <li><a href="#" class="text-white hover:text-[#CFBCFF] transition">Setup</a></li>
+        <li>
+            <a href="admin.html" class="bg-[#CFBCFF] text-black px-4 py-2 rounded-full text-sm font-bold hover:bg-[#BFA0FF] transition shadow-lg">
+                Admin
+            </a>
+        </li>
+    </ul>
+</nav>
     </header>
 
     <!-- Hero Section -->
